fixed the side gap of carousel

--- a/styles/all.css
+++ b/styles/all.css
@@ -26,7 +26,8 @@ section{
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  margin: 30px 10px;
+  margin: 30px 0px;
+  padding: 0px 10px;
 }
 h2{
   display: flex;
